--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -9,8 +9,10 @@
   padding: 1em;
   margin: 0.5em 0;
   display: flex;
+  min-width: 0;
   @include mq($break-t) {
     margin: 0 0.5em;
+    width: 100%;
   }
 }
 
@@ -26,4 +28,6 @@
   display: flex;
   flex-direction: column;
   align-self: center;
+  min-width: 0;
+  width: 100%;
 }
