--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -4,9 +4,9 @@
 
 #overlay {
   background-color: rgba(darken($gray, 50%), 0.75);
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
+  height: 100%;
+  width: 100%;
+  position: fixed;
   visibility: hidden;
   z-index: 1;
 }
@@ -24,10 +24,11 @@
   max-width: 40%;
   margin: 0 auto;
   z-index: 2;
-  position: absolute;
-  top: 10%;
-  left: 15vw;
   visibility: hidden;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   & > * {
     text-align: center;
   }
